2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546135 – GIcon and implementations improvements

	* gio/gio.defs (g_file_icon_new): Change from method of gio.File
	to constructor of gio.FileIcon.

	* tests/test_gicon.py (TestIcon.test_eq, Test_Eq.test_hash)
	(TestLoadableIcon.setUp): Adapt accordingly.
	(TestFileIcon): New test case.

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546591 – File.copy progress_callback does not work

	* gio/gfile.override (file_progress_callback_marshal): Use
	PyObject_CallFunction() instead of PyEval_CallFunction().  Use "K"
	instead of "k" (the latter is not correct for 32-bit platforms).
	Don't free 'notify' here.
	(_wrap_g_file_copy): Free 'notify'.
	(_wrap_g_file_move): Likewise.

	* gio/gio.override (pygio_free_notify): New function.
	(async_result_callback_marshal): Use it.

	* tests/test_gio.py (TestFile.test_copy_progress.progress): New
	test.

2008-08-09  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 546135 – GIcon and implementations improvements

	* gio/gio.defs (gio.LoadableIcon.load)
	(gio.LoadableIcon.load_async, gio.LoadableIcon.load_finish):
	Document.

	* gio/Makefile.am:
	* gio/gicon.override: New file: parts of 'gio.override', three
	methods of gio.LoadableIcon and gio.ThemedIcon constructor.

	* gio/gio.override: Move over all icon-related overrides to
	'gicon.override'.

	* tests/Makefile.am:
	* tests/test_gicon.py: New file: parts of 'test_gio.py' and
	several new gio.Icon tests.

	* tests/test_gio.py (TestThemedIcon): Move over to
	'test_gicon.py'.

2008-08-07  Jonathan Matthew  <jonathan@d14n.org>

	Bug 546734 – Missing Py_INCREFs for some file async methods

	* gio/gfile.override:
	Increment refcounts on callbacks and callback data for
	append_to_async, create_async, replace_async, query_info_async and
	load_contents_async as for all other async methods.

2008-08-06  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override:
	* gio/gio.defs: